added table and addbook function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <script src="library.js" defer></script>
 </head>
 <body>
-    
+    <table>
+        <tr>
+          <th>Title</th>
+          <th>Author</th>
+          <th>Pages</th>
+        </tr>
+        <tr>
+          <td>This is a data cell</td>
+          <td>This is also a data cell!</td>
+          <td>This is also a data cell!</td>
+        </tr>
+      </table>
 </body>
 </html>
