worked on function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="library.js" defer></script>
 </head>
 <body>
-    <table>
+    <table id="bookTable">
         <tr>
           <th>Title</th>
           <th>Author</th>
