add books to library with form data

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <td>This is also a data cell!</td>
         </tr>
       </table>
-      <form action="https://httpbin.org/post" method="post">
+      <form action="" id="form">
         <fieldset>
         <div class="input">
         <label for="title">Title</label>
