--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="input">
           <label for="read">Read</label>
-          <input name="read" type="checkbox" id="read" required>
+          <input name="read" type="checkbox" id="read">
           </div>
         
         </fieldset>
