added checkbox to table

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
           <th>Title</th>
           <th>Author</th>
           <th>Pages</th>
+          <th>Read</th>
         </tr>
         <tr>
-          <td>This is a data cell</td>
-          <td>This is also a data cell!</td>
-          <td>This is also a data cell!</td>
+          <td>The Hobbit</td>
+          <td>Tolkien</td>
+          <td>200</td>
         </tr>
       </table>
       <form action="" id="form">
