added read button

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         </div>
         <div class="input">
           <label for="read">Read</label>
-          <select name="rows" id="rows"> 
-            <option value="no">No</option>
-            <option value="yes">Yes</option> 
+          <select name="read" id="read"> 
+            <option value="No">No</option>
+            <option value="Yes">Yes</option> 
              
             
         </select>
