--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="library.js" defer></script>
 </head>
 <body>
+  <h1>Personal Library</h1>
     <table id="bookTable">
         <tr>
           <th>Title</th>
