--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
       <form action="" id="form">
         <fieldset>
         <div class="input">
-        <label for="title">Title</label>
+        <label for="title">Title:</label>
         <input name="title" type="text" id="title" required>
         </div>
         <div class="input">
-        <label for="author">Author</label>
+        <label for="author">Author:</label>
         <input name="author" type="text" id="author" required>
         </div>
       
         <div class="input">
-        <label for="pages">Pages</label>
+        <label for="pages">Pages:</label>
         <input name="pages" type="text" id="pages" required>
         </div>
         <div class="input">
