changed column widths

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <h1>Personal Library</h1>
     <table id="bookTable">
         <tr>
-          <th>Title</th>
-          <th>Author</th>
-          <th>Pages</th>
-          <th>Read</th>
+          <th class="th1">Title</th>
+          <th class="th1">Author</th>
+          <th class="th3">Pages</th>
+          <th class="th4">Read</th>
           
         </tr>
         
